# adventofcode

./: .gitignore  .python-version  README.md  pyproject.toml
aoc2023/: get_input.py
aoc2024/: get_input.py
aoc2025/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  get_input.py  template.py  util.py
